<resources>
     <string name="app_name">Just Java App</string>
     <string name="hint"> Name </string>

     <!-- Header text for the list of toppings [CHAR LIMIT = 20]-->
     <string name="toppings">Toppings</string>

     <!-- Text for the Whipped cream checked list [CHAR LIMIT = 20]-->
     <string name="whipped_cream"> Whipped cream</string>

     <!-- Header text for quantity [CHAR LIMIT = 20]-->
     <string name="quantity">Quantity</string>

     <!-- Text for the chocolate checked list [CHAR LIMIT = 20]-->
     <string name="chocolate">Chocolate</string>


     <string name="thank_you"> Thank You! </string>
</resources>
